--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,9 @@
     "description": "This package simplifies connecting to the SCORM Cloud API (v1).",
     "require": {
         "php": "^5.6.30 || ^7.0"
+    },
+    "autoload": {
+        "psr-4": {"ScormCloud\\": "src/"},
+        "files": ["src/DebugLogger.php"]
     }
 }
